--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <header>
       <nav class="navbar navbar-expand-lg shadow pb-2 mb-3 fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Alkic Consulting</a>
+          <a class="navbar-brand" href="./index.html">Alkic Consulting</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <svg class="ham-burger" width="36" height="36" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path d="M3.975 5.975h16"></path>
@@ -68,7 +68,7 @@
                   ><span class="btn-text-two fs-6 text-white">Welcome</span>
                 </button>
                 <div class="form-check form-switch m-2">
-                  <input class="form-check-input"  id="theme-toggle"type="checkbox" id="flexSwitchCheckDefault">
+                  <input class="form-check-input" role="button" id="theme-toggle"type="checkbox" id="flexSwitchCheckDefault">
                   <label class="form-check-label" for="flexSwitchCheckDefault"></label>
                 </div>
               </div>
