--- a/src/pages/pmp-page.html
+++ b/src/pages/pmp-page.html
@@ -4,56 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alkic Consulting PMP</title>
-    <link rel="stylesheet" href="../css/pmp-style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../css/pmp-style.css">
   </head>
   <body>
     <header>
-      <nav
-        class="navbar navbar-expand-lg navbar-light shadow p-2 mb-3 fixed-top"
-      >
+      <nav class="navbar navbar-expand-lg shadow pb-2 mb-3 fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="../index.html">Alkic Consulting</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
+          <a class="navbar-brand" href="../index.html">Alkic Consulting</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <svg class="ham-burger" width="36" height="36" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path d="M3.975 5.975h16"></path>
+              <path d="M3.975 11.975h16"></path>
+              <path d="M3.975 17.975h16"></path>
+            </svg>
           </button>
-          <div
-            class="collapse navbar-collapse text-center"
-            id="navbarSupportedContent"
-          >
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto mb-2 mb-lg-0 me-lg-4 text-center">
               <li class="nav-item">
-                <a
-                  class="nav-link active link-a"
-                  aria-current="page"
-                  href="./pmp-page.html"
+                <a class="nav-link active" aria-current="page" href="./pmp-page.html"
                   >Live Online PMP Classes</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active link-a" href="#"
-                  >Scrum Master Classes</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active link-a" href="#">About Us</a>
+                <a class="nav-link active" href="#">Scrum Master Class</a>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link dropdown-toggle active link-a"
+                  class="nav-link dropdown-toggle active"
                   href="#"
                   id="navbarDropdown"
                   role="button"
@@ -66,9 +49,7 @@
                   class="dropdown-menu text-center"
                   aria-labelledby="navbarDropdown"
                 >
-                  <li>
-                    <a class="dropdown-item" href="#">Courses</a>
-                  </li>
+                  <li><a class="dropdown-item" href="#">Courses</a></li>
                   <li>
                     <a class="dropdown-item" href="#">Groups</a>
                   </li>
@@ -78,50 +59,26 @@
                   </li>
                 </ul>
               </li>
+              <div class="d-flex justify-content-center">
+                <button class="btn btn-outline-primary mx-2 type="submit">
+                  <span class="btn-text-one fs-6 text-white">Contact</span
+                  ><span class="btn-text-two fs-6 text-white">Welcome</span>
+                </button>
+                <div class="form-check form-switch m-2">
+                  <input class="form-check-input" role="button" id="theme-toggle"type="checkbox" id="flexSwitchCheckDefault">
+                  <label class="form-check-label" for="flexSwitchCheckDefault"></label>
+                </div>
+              </div>
             </ul>
-            <form class="d-flex">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-primary" type="submit">
-                <span class="btn-text-one fs-6 text-white">Contact</span
-                ><span class="btn-text-two fs-6 text-white">Welcome</span>
-              </button>
-            </form>
-          </div>
+          </div>  
         </div>
       </nav>
     </header>
-    <main>
-      <div class="container-fluid pmp-main">
-        <div class="row">
-          <div class="col-sm-6 main-img bg-danger">
-            <h2>Discover the Power of Online Project Management Training</h2>
-          </div>
-          <div class="col-sm-6">
-            <p class="lead">
-              At Alkic Consulting, we believe that every great project deserves
-              an exceptional project manager. As industries rapidly evolve and
-              organizations face dynamic challenges, the demand for skilled
-              project management professionals continues to soar. Our Online
-              Project Management Training is meticulously crafted to equip you
-              with the essential tools, knowledge, and expertise to lead with
-              confidence in this ever-changing landscape, all from the
-              convenience of your location, anywhere in the world.
-            </p>
-          </div>
-        </div>
-      </div>
-    </main>
-    <button class="btn" id="theme-toggle">Toggle Theme</button>
-    <script src="../scripts/index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="../scripts/index.js"></script>
   </body>
 </html>
