--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,7 @@
           </a></li>
         </ul>
         <ul class="nav justify-content-center mb-3">
-          <li class="nav-item"><a href="#" class="nav-link px-2">Live Online PMP Classes</a></li>
+          <li class="nav-item"><a href="./pages/pmp-page.html" class="nav-link px-2">Live Online PMP Classes</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Scrum Master Class</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Courses</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">FAQs</a></li>
