--- a/src/pages/pmp-page.html
+++ b/src/pages/pmp-page.html
@@ -79,7 +79,7 @@
       </nav>
     </header>
     <main>
-      <div class="container shadow">
+      <div class="container">
         <div class="row text-center main-page">
           <div class="col-sm-6 my-5 animate__animated animate__slideInLeft">
             <h1>Take the first step towards <br> PMP and SCRUM <br> mastery by exploring our training programs</h1>
@@ -94,11 +94,11 @@
       <!-- SRoll 2 Coloum 1ection 1 -->
       <section>
         <div class="container my-5">
-          <h1 class="text-center section1">Why Choose Alkic Consulting</h1>
+          <h1 class="text-center section1 pb-3">Why Choose Alkic Consulting</h1>
           <div class="row">
             <!-- card 1 -->
             <div class="col-sm">
-              <div class="card shadow text-center mx-auto">
+              <div class="cards shadow text-center mx-auto">
                 <p class="card-title">Product Name</p>
                 <p class="small-desc">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
@@ -113,7 +113,7 @@
             </div>
             <!-- card 2 -->
             <div class="col-sm">
-              <div class="card shadow text-center mx-auto">
+              <div class="cards shadow text-center mx-auto">
                 <p class="card-title">Product Name</p>
                 <p class="small-desc">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
@@ -130,7 +130,7 @@
             <div class="row">
               <!-- Card 3 -->
               <div class="col-sm">
-                <div class="card shadow text-center mx-auto">
+                <div class="cards shadow text-center mx-auto">
                   <p class="card-title">Product Name</p>
                   <p class="small-desc">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
@@ -145,7 +145,7 @@
               </div>
               <!-- col 4 -->
               <div class="col-sm">
-                <div class="card shadow text-center mx-auto">
+                <div class="cards shadow text-center mx-auto">
                   <p class="card-title">Product Name</p>
                   <p class="small-desc">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
@@ -162,8 +162,139 @@
           </div>
       </section>
     </main>
-
-
+    <!-- Client Testimony -->
+    <section>
+      <div class="container review-container mt-5">
+        <h1 class="text-center testimony mb-4">Praises & Reviews</h1>
+        <div class="row text-center">
+            <div class="col-sm">
+              <img src="../imgs/img-pmp/double-quote-icon.png" alt="" class="img-fluid mb-3">
+              <p class="lead user-review">
+                perspiciatis cumque minima quasi voluptatem ad nam corrupti  voluptatibus facere eveniet laudantium accusantium 
+                doloremque praesentium! Natus, modi consectetur aliquid voluptatibus optio alias?
+              </p>
+              <h4 class="mb-5">Jonas Schedtmman</h4>
+            </div>
+            <div class="col-sm shadow rounded-3 pt-3">
+              <img src="../imgs/img-pmp/double-quote-icon.png" alt="" class="img-fluid mb-3">
+              <p class="lead user-review">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. necessitatibus! Placeat cupiditate, magni qui inventore 
+                nostrum at consequatur sequi illo explicabo velit repellendus nesciunt mollitia delectus
+              </p>
+              <h4 class="mb-5">Peterson Philips</h4>
+            </div>
+            <div class="col-sm pt-3">
+              <img src="../imgs/img-pmp/double-quote-icon.png" alt="" class="img-fluid mb-3">
+              <p class="lead user-review">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores ratione cupiditate quis sint deleniti asperiores 
+                laborum consectetur similique quidem repudiandae, excepturi quas neque quaerat iure.
+              </p>
+              <h4 class="mb-5">Andrew Oscar</h4>
+            </div>
+        </div>
+      </div>
+    </section>
+    <!-- FAQ Section-->
+    <section>
+      <div class="container">
+        <div class="row text-center">
+          <h1>FAQ's</h1>
+          <!-- faq 1 -->
+          <div class="col-sm-6 col-lg-4">
+            <div class="card faq-card">
+              <p class="lead fs-4">How will PMP certification benefit me?</p>
+              <div class="go-corner">
+                <div class="go-arrow">→</div>
+              </div>
+              <div class="card__content">
+                <p class="card__description">
+                  ALKIC PMP certification training will enable you to make an appreciable difference in how you manage projects, and significantly improve your ability to deliver on time, on budget, and to specification.
+                </p>
+                <button class="btn text-white">Live Demo</button>
+              </div>
+            </div>
+          </div>
+          <!-- faq 2 -->
+          <div class="col-sm-6 col-lg-4">
+            <div class="card faq-card">
+              <p class="lead fs-4">Do I really need to be a Project Manager when I am not in Engineering or IT?</p>
+              <div class="go-corner">
+                <div class="go-arrow">→</div>
+              </div>
+              <div class="card__content">
+                <p class="card__description">
+                  ALKIC PMP certification training will enable you to make an appreciable difference in how you manage projects, and significantly improve your ability to deliver on time, on budget, and to specification.
+                </p>
+                <button class="btn text-white">Live Demo</button>
+              </div>
+            </div>
+          </div>
+          <!-- faq 3 -->
+          <div class="col-sm-6 col-lg-4">
+            <div class="card faq-card">
+              <p class="lead fs-4">I am an Entrepreneur, not looking for employment. Do I need Project Management?</p>
+              <div class="go-corner">
+                <div class="go-arrow">→</div>
+              </div>
+              <div class="card__content">
+                <p class="card__description">
+                  ALKIC PMP certification training will enable you to make an appreciable difference in how you manage projects, and significantly improve your ability to deliver on time, on budget, and to specification.
+                </p>
+                <button class="btn text-white">Live Demo</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Section 2 of FAQ -->
+        <div class="row text-center">
+          <!-- faq 1 -->
+          <div class="col-sm-6 col-lg-4">
+            <div class="card faq-card">
+              <p class="lead fs-4">How will PMP certification benefit me?</p>
+              <div class="go-corner">
+                <div class="go-arrow">→</div>
+              </div>
+              <div class="card__content">
+                <p class="card__description">
+                  ALKIC PMP certification training will enable you to make an appreciable difference in how you manage projects, and significantly improve your ability to deliver on time, on budget, and to specification.
+                </p>
+                <button class="btn text-white">Live Demo</button>
+              </div>
+            </div>
+          </div>
+          <!-- faq 2 -->
+          <div class="col-sm-6 col-lg-4">
+            <div class="card faq-card">
+              <p class="lead fs-4">Do I really need to be a Project Manager when I am not in Engineering or IT?</p>
+              <div class="go-corner">
+                <div class="go-arrow">→</div>
+              </div>
+              <div class="card__content">
+                <p class="card__description">
+                  ALKIC PMP certification training will enable you to make an appreciable difference in how you manage projects, and significantly improve your ability to deliver on time, on budget, and to specification.
+                </p>
+                <button class="btn text-white">Live Demo</button>
+              </div>
+            </div>
+          </div>
+          <!-- faq 3 -->
+          <div class="col-sm-6 col-lg-4">
+            <div class="card faq-card">
+              <p class="lead fs-4">I am an Entrepreneur, not looking for employment. Do I need Project Management?</p>
+              <div class="go-corner">
+                <div class="go-arrow">→</div>
+              </div>
+              <div class="card__content">
+                <p class="card__description">
+                  ALKIC PMP certification training will enable you to make an appreciable difference in how you manage projects, and significantly improve your ability to deliver on time, on budget, and to specification.
+                </p>
+                <button class="btn text-white">Live Demo</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <div class="container shadow animate__animated animate__fadeInUpBig">
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center mb-3">
