--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
               <li class="nav-item">
                 <a class="nav-link active" href="#">Scrum Master Class</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="../pages/pricing.html">Pricing</a>
+              </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle active"
@@ -255,6 +258,7 @@
           <li class="nav-item"><a href="./pages/pmp-page.html" class="nav-link px-2">Live Online PMP Classes</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Scrum Master Class</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Courses</a></li>
+          <li class="nav-item"><a href="./pages/pricing.html" class="nav-link px-2">Pricing</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">FAQs</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">About</a></li>
         </ul>
