--- a/src/pages/pmp-page.html
+++ b/src/pages/pmp-page.html
@@ -38,6 +38,9 @@
               <li class="nav-item">
                 <a class="nav-link active" href="#">Scrum Master Class</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="../pages/pricing.html">Pricing</a>
+              </li>
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle active"
@@ -246,7 +249,7 @@
           </div>
         </div>
         <!-- Section 2 of FAQ -->
-        <div class="row text-center">
+        <div class="row text-center" id="faq-section">
           <!-- faq 1 -->
           <div class="col-sm-6 col-lg-4">
             <div class="card faq-card">
@@ -320,7 +323,8 @@
           <li class="nav-item"><a href="./pmp-page.html" class="nav-link px-2">Live Online PMP Classes</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Scrum Master Class</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">Courses</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2">FAQs</a></li>
+          <li class="nav-item"><a href="./pricing.html" class="nav-link px-2">Pricing</a></li>
+          <li class="nav-item"><a href="#" id="faq-section" class="nav-link px-2">FAQs</a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2">About</a></li>
         </ul>
         <ul class="nav justify-content-center">
