--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           />
-          <label class="icon-menu d-sm-flex d-lg-none" for="check-icon">
+          <label class="icon-menu d-sm-flex d-lg-none" for="check-icon" id="hamd">
             <div class="bar bar--1"></div>
             <div class="bar bar--2"></div>
             <div class="bar bar--3"></div>
